2009-11-27  Dan Fandrich <dan@coneharvesters.com>

	* po/ja.po: Updated Japanese translation by Tadashi Jokagi

2009-11-25  Dan Fandrich <dan@coneharvesters.com>

	* po/da.po: Updated Danish translation by Joe Hansen

2009-11-23  Dan Fandrich <dan@coneharvesters.com>

	* Include README-Win32.txt in all source distributions

2009-11-16  Dan Fandrich <dan@coneharvesters.com>

	* po/ja.po: Updated Japanese translation by Tadashi Jokagi

2009-11-12  Dan Fandrich <dan@coneharvesters.com>

	* Fixed a heap buffer overflow during tag format conversion.
	* Released 0.6.19

2009-11-07  Dan Fandrich <dan@coneharvesters.com>

	* Sorted ExifFormatTable[] in approximate decreasing order of
	  popularity to decrease the total average lookup time.

2009-11-05  Dan Fandrich <dan@coneharvesters.com>

	* Added a bunch of new translations from launchpad.net
	* po/be.po: Added Belarusian translation by Iryna Nikanchuk 
	* po/en_GB.po: Added English (United Kingdom) translation by Bruce
	  Cowan 
	* po/it.po: Added Italian translation by Sergio Zanchetta 
	* po/ja.po: Added Japanese translation by Shushi Kurose 
	* po/pt.po: Added Portuguese translation by nglnx 
	* po/sq.po: Added Albanian translation by Vilson Gjeci 
	* po/zh_CN.po: Added Chinese (simplified) translation by Tao Wei 

2009-11-03  Dan Fandrich <dan@coneharvesters.com>

	* po/da.po: Updated Danish translation by Joe Hansen

2009-10-27  Dan Fandrich <dan@coneharvesters.com>

	* Improved tag table lookup performance by optimally ordering IFD
	  search and aborting searches early if the tag is not found.

2009-10-14  Dan Fandrich <dan@coneharvesters.com>

	* Changed the various functions searching for tags in ExifTagTable[]
	  to use a binary search. This single change increases the speed of
	  a run through the libexif-testsuite by 7%

2009-10-13  Dan Fandrich <dan@coneharvesters.com>

	* po/sv.po: Updated Swedish translation by Daniel Nylander
	* po/vi.po: Updated Vietnamese translation by Clytie Siddall